--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -8,3 +8,11 @@
 /Pen.class
 /colors.class
 /Point.class
+/assignment6/
+/ColorCustomListener.class
+/colorOption.class
+/ColorOption.class
+/ColorCustomListener$1.class
+/RadiusOption.class
+/RadiusCustomListener.class
+/ControlPanel$1RadiusCustomListener.class
