--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -16,3 +16,15 @@
 /RadiusOption.class
 /RadiusCustomListener.class
 /ControlPanel$1RadiusCustomListener.class
+/connectFrame.class
+/ClientListener.class
+/GuestListener.class
+/Network.class
+/PaintFrame.class
+/connectFrame$1GuestListener.class
+/connectFrame$1HostListener.class
+/PaintPanel.class
+/ConnectFrame$1GuestListener.class
+/ConnectFrame$1HostListener.class
+/ConnectFrame.class
+/ControlPanel$1.class
