--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -28,3 +28,8 @@
 /ConnectFrame$1HostListener.class
 /ConnectFrame.class
 /ControlPanel$1.class
+/ColorCustomListener$2.class
+/ColorChooserFrame.class
+/ControlPanel$2.class
+/ColorChooserFrame$1.class
+/PenPoint.class
