--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -34,3 +34,8 @@
 /ColorChooserFrame$1.class
 /PenPoint.class
 /MenuListener.class
+/ConnectFrame$1ClientListener.class
+/ConnectFrame$1ServerListener.class
+/ControlPanel$1RadiusOption.class
+/ControlPanel$RadiusOption.class
+/ControlPanel$1ColorOption.class
