--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -39,3 +39,10 @@
 /ControlPanel$1RadiusOption.class
 /ControlPanel$RadiusOption.class
 /ControlPanel$1ColorOption.class
+/ClientManager.class
+/NetworkManager.class
+/ServerManager.class
+/PaintFrame$1.class
+/PaintFrame$2.class
+/PaintFrame$3.class
+/PaintFrame$4.class
