--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -13,3 +13,9 @@
 /ServerManager$ClientHandler.class
 /ServerManager.class
 /CoPainter.class
+/ControlPanel$1.class
+/ControlPanel$1ColorOption.class
+/ControlPanel$1RadiusCustomListener$1.class
+/ControlPanel$1RadiusCustomListener.class
+/ControlPanel$1RadiusOption.class
+/ControlPanel$1RadiusSetListener.class
