--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -19,3 +19,4 @@
 /ControlPanel$1RadiusCustomListener.class
 /ControlPanel$1RadiusOption.class
 /ControlPanel$1RadiusSetListener.class
+/PaintFrame$7.class
