--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,21 @@
+/ConnectFrame$1ServerListener.class
+/ControlPanel$1.class
+/ControlPanel$1ColorOption.class
+/ControlPanel$1RadiusCustomListener$1.class
+/ControlPanel$1RadiusCustomListener.class
+/ControlPanel$1RadiusOption.class
+/ControlPanel$1RadiusSetListener.class
+/ControlPanel.class
+/NetworkManager.class
+/PaintFrame$1.class
+/PaintFrame$2.class
+/PaintFrame$3.class
+/PaintFrame$4.class
+/PaintFrame$5.class
 /PaintFrame$6.class
+/PaintFrame.class
+/PaintPanel.class
+/Path.class
+/PenPoint.class
+/ServerManager$ClientHandler.class
+/ServerManager.class
