Instant Syncing path

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -19,3 +19,8 @@
 /PenPoint.class
 /ServerManager$ClientHandler.class
 /ServerManager.class
+/HelpDialog$1.class
+/HelpDialog$2.class
+/HelpDialog$3.class
+/HelpDialog$ExitListener.class
+/HelpDialog.class
