--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,8 @@
-/ConnectFrame$1ServerListener.class
-/ControlPanel$1.class
-/ControlPanel$1ColorOption.class
-/ControlPanel$1RadiusCustomListener$1.class
-/ControlPanel$1RadiusCustomListener.class
-/ControlPanel$1RadiusOption.class
-/ControlPanel$1RadiusSetListener.class
-/ControlPanel.class
+/HelpDialog$1.class
+/HelpDialog$2.class
+/HelpDialog$3.class
+/HelpDialog$ExitListener.class
+/HelpDialog.class
 /NetworkManager.class
 /PaintFrame$1.class
 /PaintFrame$2.class
@@ -13,14 +10,14 @@
 /PaintFrame$4.class
 /PaintFrame$5.class
 /PaintFrame$6.class
+/PaintFrame$7.class
 /PaintFrame.class
 /PaintPanel.class
 /Path.class
 /PenPoint.class
 /ServerManager$ClientHandler.class
 /ServerManager.class
-/HelpDialog$1.class
-/HelpDialog$2.class
-/HelpDialog$3.class
-/HelpDialog$ExitListener.class
-/HelpDialog.class
+/assignment6/
+/NetworkPackage.class
+/MyPoint.class
+/Instance.class
